k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-pal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-pal
  template:
    metadata:
      labels:
        app: project-pal
    spec:
      containers:
      - name: project-pal
        image: porterpants/project-deployment-team:latest
        ports:
        - containerPort: 80
