k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-pal-service
spec:
  selector:
    app: project-pal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
